--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  margin: 0;
-  padding: 0;
+
+*{  
   box-sizing: border-box;
+  margin-top: 0px;
 }
+
+.ellipses{
+  border-radius:100% 0% 0% 100% / 0% 100% 0% 100%  ;
+}
+
+
+
+
